Alteração de layout issue #4
add pagina agenda.php
fix bug fotos espaçamento

--- a/css/main.css
+++ b/css/main.css
@@ -338,9 +338,6 @@ padding:0px 20px;
 .navbar-collapse{
 max-height:530px !important;
 }
-.fotos {
-    padding: 320px 0 0;
-}
 a.social:active, a.social:hover, a.social:focus{
 /*border-radius*/
 -webkit-border-radius:20px;
